--- a/views/tts.ejs
+++ b/views/tts.ejs
@@ -5,6 +5,7 @@
     <title>Speech Recognition Models</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -112,7 +113,7 @@
         console.log('called Gender:', gender, ' Text:', inputText);
         document.getElementById('audioData').innerHTML = '<div class="spinner-border" role="status"><span class="sr-only">Loading...</span></div>';
 
-        fetch('http://34.121.100.224:5000/TTS/', {
+        fetch('/tts/infer', {
             // mode: 'no-cors',
             method: 'POST',
             headers: {
