--- a/views/index.ejs
+++ b/views/index.ejs
@@ -473,8 +473,7 @@
                     <div class="col-sm-12">
                         <center>
                             <strong class="disclaimer">Note:</strong>
-                            <p class="disclaimer">Max duration: 15 mins (If more, transcript of first 15 mins only will
-                                be given)</p>
+                            <p class="disclaimer">Max size: 3mb (If more, the request will fail.)</p>
                         </center>
                         <div class="custom-file mb-3">
                             <input type="file" accept=".wav,.mp3,.mp4,.ogg,.m4a" class="custom-file-input"
@@ -482,7 +481,7 @@
                             <label class="custom-file-label" for="customFile" id="file_upload_label">Upload
                                 File</label>
                         </div>
-                        <p id="file-error" style="display: none; color: red;">Chosen File size is greater than 3.5 MB
+                        <p id="file-error" style="display: none; color: red;">Chosen File size is greater than 3 MB
                         </p>
                         <audio id="audio" controls style="display:none;">
                             <source src="" id="audio_source" />
@@ -1085,11 +1084,11 @@
                 let theSplit = chosenFile.split('\\');
                 chosenFile = theSplit[theSplit.length - 1];
                 document.getElementById('file_upload_label').innerHTML = chosenFile;
-                // if (file.size > 3500000) {
-                //     $('#file-error').show();
-                //     $('#run-model-btn').prop('disabled', true);
-                //     return;
-                // }
+                if (file.size > 3000000) {
+                    $('#file-error').show();
+                    $('#run-model-btn').prop('disabled', true);
+                    return;
+                }
                 // let fileNameSplit = file.name.split(".");
                 // if()
                 if (ENABLE_LOGS === true)
@@ -1168,44 +1167,66 @@
                 });
             }
 
-            function uploadFileToBatchService() {
-                let files = document.querySelector('#audio_file_input').files;
-                let blob = files[0];
-                //let language = 'hi';
-                let formData = new FormData();
-                formData.append("audio_data", blob);
-                formData.append("language", current_lang);
-                formData.append("user", "");
-                let filename = blob.name;
-                $.ajax({
-                    type: 'POST',
-                    url: `/batch-service`,
-                    data: formData,
-                    contentType: false,
-                    processData: false,
-                    crossDomain: true,
-                    beforeSend: function () {
-                        // Show image container
-                        $('#file-loader').show();
-                    },
-                    success: function (response, textStatus, jqXHR) {
-                        const resp = response["data"];
-                        let a = document.createElement('a');
-                        let bl = new Blob([resp["srt"]], { 'type': 'text/plain' });
-                        let url = window.URL.createObjectURL(bl);
-                        a.href = url;
-                        filename = filename.slice(0, filename.length - 4);
-                        a.download = filename + '.srt';
-                        a.click();
-                        window.URL.revokeObjectURL(url);
-                        $('#file-loader').hide();
-                    },
-                    error: function (jqXHR, textStatus, errorThrown) {
-                        alert('Failed: ' + textStatus);
-                        $('#file-loader').hide();
-                    }
+            function blobToData(blob){
+                return new Promise((resolve) => {
+                    const reader = new FileReader()
+                    reader.onloadend = () => resolve(reader.result)
+                    reader.readAsDataURL(blob)
+                })
+            }
 
-                });
+            async function uploadFileToBatchService() {
+                function onSuccess(resp){
+                    const srtString = resp["output"][0]["source"];
+                    // const resp = response["data"];
+                    let a = document.createElement('a');
+                    let bl = new Blob([srtString], { 'type': 'text/plain' });
+                    let url = window.URL.createObjectURL(bl);
+                    a.href = url;
+                    filename = filename.slice(0, filename.length - 4);
+                    a.download = filename + '.srt';
+                    a.click();
+                    window.URL.revokeObjectURL(url);
+                    $('#file-loader').hide();
+                }
+                function onError(err){
+                    alert('Failed: ' + err["status"]);
+                    $('#file-loader').hide();
+                }
+                let files = document.querySelector('#audio_file_input').files;
+                
+                let blob = files[0];
+                let filename = blob.name;
+
+                let base64String = await blobToData(blob);
+                base64String = base64String.substr(base64String.indexOf('base64,') + 7);
+                console.log(base64String);
+                $('#file-loader').show();
+                let url = `https://meity-dev-asr.ulcacontrib.org/asr/v1/recognize/${current_lang}`;
+                fetch(url, {
+                    method: 'POST',
+                    body: JSON.stringify({
+                        'config': {
+                            'audioFormat': 'wav',
+                            'transcriptionFormat': {'value': 'srt'}
+                        },
+                        'audio': [
+                            {
+                                "audioContent": base64String
+                            }
+                        ]
+                    }),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                }).then(async response=>{
+                    let resp = await response.json();
+                    if(response.ok)
+                    {
+                        return resp;         
+                    }
+                    throw new Error(resp);
+                }).then(onSuccess).catch(onError)
             }
 
             function punctuateText(textToPunctuate) {
