|Ankit, Soujyo| add gu, te, or in TTS

--- a/views/tts.ejs
+++ b/views/tts.ejs
@@ -72,6 +72,9 @@
                         <option value="ta">Tamil</option>
                         <option value="ml">Malayalam</option>
                         <option value="kn">Kannada</option>
+                        <option value="gu">Gujarati</option>
+                        <option value="te">Telugu</option>
+                        <option value="or">Odia</option>
                     </select>
                 </div>
             </div>
@@ -107,6 +110,9 @@
         ta: 'இந்தியா எனது நாடு, நான் இந்தியனாக இருப்பதில் பெருமை கொள்கிறேன்.',
         ml: 'ഇന്ത്യ എന്റെ രാജ്യമാണ്, ഒരു ഇന്ത്യക്കാരനായതിൽ ഞാൻ അഭിമാനിക്കുന്നു.',
         kn: 'ಭಾರತ ನನ್ನ ದೇಶ ಮತ್ತು ನಾನು ಭಾರತೀಯನಾಗಿರುವುದಕ್ಕೆ ಹೆಮ್ಮೆಪಡುತ್ತೇನೆ.',
+        gu: 'ભારત મારો દેશ છે',
+        or: 'ଭାରତ ହେଉଛି ମୋର ଦେଶ |',
+        te: 'భారతదేశం నా దేశం',
     }
 
     $("#language").on('change', () => {
