|Ankit| add support for bengali

--- a/views/tts.ejs
+++ b/views/tts.ejs
@@ -75,6 +75,7 @@
                         <option value="gu">Gujarati</option>
                         <option value="te">Telugu</option>
                         <option value="or">Odia</option>
+                        <option value="bn">Bengali</option>
                     </select>
                 </div>
             </div>
@@ -113,6 +114,7 @@
         gu: 'ભારત મારો દેશ છે અને મને ભારતીય હોવાનો ગર્વ છે.',
         or: 'ଭାରତ ମୋର ଦେଶ ଏବଂ ମୁଁ ଜଣେ ଭାରତୀୟ ହୋଇଥିବାରୁ ଗର୍ବିତ |',
         te: 'భారతదేశం నా దేశం మరియు నేను భారతీయుడిగా గర్వపడుతున్నాను.',
+        bn: 'ভারত আমার দেশ এবং আমি একজন ভারতীয় হিসেবে গর্বিত।',
     }
 
     $("#language").on('change', () => {
