--- a/views/index.ejs
+++ b/views/index.ejs
@@ -610,7 +610,7 @@
         }
 
         function connectSocket(startMic) {
-            socket = io('/', {autoConnect: false , query: `language=${current_lang}`});
+            socket = io('/', {autoConnect: false , query: `language=${current_lang}`, transports: [ "websocket", "polling"] });
             socket.connect();
             socket.on('connect', function () {
                 userId = socket.id;
