feat: enabled 4 languages

--- a/views/tts.ejs
+++ b/views/tts.ejs
@@ -72,6 +72,10 @@
                         <option value="ta">Tamil</option>
                         <option value="ml">Malayalam</option>
                         <option value="kn">Kannada</option>
+                        <option value="gu">Gujarati</option>
+                        <option value="te">Telugu</option>
+                        <option value="or">Odia</option>
+                        <option value="bn">Bengali</option>
                     </select>
                 </div>
             </div>
@@ -107,6 +111,10 @@
         ta: 'இந்தியா எனது நாடு, நான் இந்தியனாக இருப்பதில் பெருமை கொள்கிறேன்.',
         ml: 'ഇന്ത്യ എന്റെ രാജ്യമാണ്, ഒരു ഇന്ത്യക്കാരനായതിൽ ഞാൻ അഭിമാനിക്കുന്നു.',
         kn: 'ಭಾರತ ನನ್ನ ದೇಶ ಮತ್ತು ನಾನು ಭಾರತೀಯನಾಗಿರುವುದಕ್ಕೆ ಹೆಮ್ಮೆಪಡುತ್ತೇನೆ.',
+        gu: 'ભારત મારો દેશ છે અને મને ભારતીય હોવાનો ગર્વ છે.',
+        or: 'ଭାରତ ମୋର ଦେଶ ଏବଂ ମୁଁ ଜଣେ ଭାରତୀୟ ହୋଇଥିବାରୁ ଗର୍ବିତ |',
+        te: 'భారతదేశం నా దేశం మరియు నేను భారతీయుడిగా గర్వపడుతున్నాను.',
+        bn: 'ভারত আমার দেশ এবং আমি একজন ভারতীয় হিসেবে গর্বিত।',
     }
 
     $("#language").on('change', () => {
