--- a/views/tts.ejs
+++ b/views/tts.ejs
@@ -76,6 +76,7 @@
                         <option value="te">Telugu</option>
                         <option value="or">Odia</option>
                         <option value="bn">Bengali</option>
+                        <option value="en">English</option>
                     </select>
                 </div>
             </div>
@@ -115,6 +116,7 @@
         or: 'ଭାରତ ମୋର ଦେଶ ଏବଂ ମୁଁ ଜଣେ ଭାରତୀୟ ହୋଇଥିବାରୁ ଗର୍ବିତ |',
         te: 'భారతదేశం నా దేశం మరియు నేను భారతీయుడిగా గర్వపడుతున్నాను.',
         bn: 'ভারত আমার দেশ এবং আমি একজন ভারতীয় হিসেবে গর্বিত।',
+        en: 'India is my country and I am proud to be an Indian.',
     }
 
     $("#language").on('change', () => {
