|Ankit,Umair| add marathi in TTS

--- a/views/tts.ejs
+++ b/views/tts.ejs
@@ -77,6 +77,7 @@
                         <option value="or">Odia</option>
                         <option value="bn">Bengali</option>
                         <option value="en">English</option>
+                        <option value="mr">Marathi</option>
                     </select>
                 </div>
             </div>
@@ -117,6 +118,7 @@
         te: 'భారతదేశం నా దేశం మరియు నేను భారతీయుడిగా గర్వపడుతున్నాను.',
         bn: 'ভারত আমার দেশ এবং আমি একজন ভারতীয় হিসেবে গর্বিত।',
         en: 'India is my country and I am proud to be an Indian.',
+        mr: 'भारत माझा देश आहे आणि मला भारतीय असल्याचा अभिमान आहे.'
     }
 
     $("#language").on('change', () => {
